Gant landing page update
Gant landing page update

--- a/es/gantt.html
+++ b/es/gantt.html
@@ -33,10 +33,10 @@
            <a href="#url"><img src="../images/logo.png" alt=""></a>
          </div>
            <div class="ml-auto"><a href="https://app.workep.com/login" class="signupgoogle">
-          <span class="textdesk">REGÍSTRATE CON GOOGLE</span>
-          <span class="textmob">REGÍSTRATE</span>
-        </a>
-      </div>
+            <span class="textdesk">REGÍSTRATE CON GOOGLE</span>
+            <span class="textmob">REGÍSTRATE</span>
+           </a>
+          </div>
         </nav>
       </div>
 </header>
@@ -47,6 +47,12 @@
       <div class="time_tracker_contentbox">
         <h1>Diagrama de Gantt <br>automático</h1>
         <h3>Vea el cronograma completo de su proyecto, incluidas las tareas, subtareas y <u>dependencias.</u></h3>
+      </div>
+      <br>
+      <div class="ml-auto"><a href="https://app.workep.com/login" class="signupgoogle" style="width: 350px;">
+        <span class="textdesk">REGÍSTRATE CON GOOGLE</span>
+        <span class="textmob">REGÍSTRATE</span>
+       </a>
       </div>
     </div>
     <div class="container time_tracker_img">
@@ -77,7 +83,7 @@
                 <figure>
                   <img src="../images/f6-c.png" alt="">
                 </figure>
-                <h4>Programe su proyecto</h4>
+                <h4>Registre su proyecto</h4>
               </div>
             </div>
             <div class="col-md-4">
@@ -143,8 +149,8 @@
     <div class="container">
       <h2>¿Quieres saber más sobre el diagrama de Gantt?<i><img src="../images/vshs.png" alt="conoce más"></i></h2>
       <ul class="twobutton_sec_bot">
-        <li><a href="https://projectmanagement.workep.com/contact-sales" class="bluebtn_link">OBTENER MÁS INFORMACIÓN</a></li>
-        <li><a href="https://projectmanagement.workep.com/request-demo" class="bluebtn_link">SOLICITA UN DEMO</a></li>
+        <!--<li><a href="https://projectmanagement.workep.com/contact-sales" class="bluebtn_link">OBTENER MÁS INFORMACIÓN</a></li>-->
+        <li><a href="https://projectmanagement.workep.com/demo" class="bluebtn_link">SOLICITA UN DEMO</a></li>
       </ul>
     </div>
   </div>
@@ -156,10 +162,10 @@
         <div class="foot_top_row">
           <div class="foot1">
             <a href="https://workep.com/" class="footer_logo"><img src="../images/logo.png" alt="Logo Workep"></a>
-            <p>©2020 Workep,Inc. All rights reserved <br>
+            <p>©2020 Workep,Inc. Todos los derechos reservados <br>
               <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
             </p>
-            <span class="madeby">Made with <i><img src="../images/heart_im.png" alt="workep made with love"></i> by Workep</span>
+            <span class="madeby">Hecho con <i><img src="../images/heart_im.png" alt="workep made with love"></i> por Workep</span>
           </div>
           <div class="foot2">
            <h4>Producto</h4>
@@ -168,17 +174,17 @@
               <!-- <li><a href="#url">Integrations </a></li> -->
               <!-- <li><a href="#url">Users guide </a></li> -->
               <!-- <li><a href="https://workep.com/es/casosdeuso.html">Casos de uso </a></li> -->
-              <li><a href="https://projectmanagement.workep.com/request-demo">Solicitar un demo </a></li>
-              <li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>
+              <li><a href="https://projectmanagement.workep.com/demo">Solicitar un demo </a></li>
+              <li><a href="https://projectmanagement.workep.com/contacta-a-ventas">Contactar a ventas</a></li>
               <li><a href="https://workep.com/es/hecho-para-google.html">Hecho para Google</a></li>
-              <li><a href="https://workep.com/es/workep-para-educacion.html">Workep Para Educación</a></li>
+              <!--<li><a href="https://workep.com/es/workep-para-educacion.html">Workep Para Educación</a></li>-->
               <li><a href="https://workep.com/es/descargar-apps.html">Descargar Apps</a></li>
             </ul>
               <h4>Características</h4>
             <ul class="links_all">
-                <li><a href="https://workep.com/es/time-tracker.html">Time traker</a></li>
-                <li><a href="https://workep.com/es/budget-tracker.html">Budget Traker</a></li>
-                <li><a href="https://workep.com/es/colaboracion-externa.html">External Collaboration</a></li>
+                <li><a href="https://workep.com/es/time-tracker.html">Registro de tiempo</a></li>
+                <li><a href="https://workep.com/es/budget-tracker.html">Registro de gastos</a></li>
+                <li><a href="https://workep.com/es/colaboracion-externa.html">Colaboración externa</a></li>
                 <li><a href="https://workep.com/es/diagrama-de-gantt.html">Diagrama de Gantt</a></li>
                 <li><a href="https://workep.com/es/plugin-gmail.html">Gmail Ad-on</a></li>
             </ul>
@@ -191,7 +197,7 @@
               <li><a href="https://workep.com/es/socios.html">Socios</a></li>
               <!--<li><a href="#url">Press Kit</a></li>-->
             </ul>
-            <h4>Competidores</h4>
+            <!--<h4>Competidores</h4>
             <ul class="links_all">
                 <li><a href="https://workep.com/es/competidor-airtable.html">Airtable</a></li>
                 <li><a href="https://workep.com/es/competidor-asana.html">Asana</a></li>
@@ -202,7 +208,7 @@
                 <li><a href="https://workep.com/es/competidor-smartsheet.html">Smartsheet</a></li>
                 <li><a href="https://workep.com/es/competidor-trello.html">Trello</a></li>
                 <li><a href="https://workep.com/es/competidor-wrike.html">Wrike</a></li>
-            </ul>  
+            </ul>-->  
           </div>
           <div class="foot4">
             <h4>Recursos</h4>
@@ -218,14 +224,14 @@
               <li><a href="https://workep.com/privacy-policy.html">Política de privacidad</a></li>
               <li><a href="https://workep.com/terms.html">Términos del servicio</a></li>
             </ul>
-              <h4>Industrias</h4>
+              <!--<h4>Industrias</h4>
             <ul class="links_all">
                 <li><a href="https://workep.com/es/startups.html">Startup</a></li>
                 <li><a href="https://workep.com/es/firmas-de-abogados.html">Firmas de abogados</a></li>
                 <li><a href="https://workep.com/es/desarrollo-de-software.html">Compañías de software</a></li>
                 <li><a href="https://workep.com/es/consultoria.html">Servicios profesionales</a></li>
                 <li><a href="https://workep.com/es/marketing.html">Marketing y creatividad</a></li>
-            </ul>
+            </ul>-->
           </div>
           </div>
           <div class="foot5">
