--- a/partners.html
+++ b/partners.html
@@ -159,7 +159,7 @@
           </div>
         </div>
         <div class="missing_half_btn">
-          <a href="#url" class="signupgoogle"><span>BECOME A PARTNER</span></a>
+          <a href="https://projectmanagement.workep.com/become-a-partner" class="signupgoogle"><span>BECOME A PARTNER</span></a>
         </div>
 
       </div>
@@ -330,7 +330,7 @@
       <img src="images/join-our-family.jpg" alt="unete a nuestra familia">
       <div class="join_our_family_con">
         <h2>Join our family today!</h2>
-        <a href="#url" class="signupgoogle"><span>BECOME A PARTNER</span></a>
+        <a href="https://projectmanagement.workep.com/become-a-partner" class="signupgoogle"><span>BECOME A PARTNER</span></a>
       </div>
     </div>
   </div>
@@ -446,9 +446,5 @@
 <script src="js/easy-responsive-tabs.js"></script>
 <script src="js/common.js"></script>
 <script src="js/redirect.js?version=3"></script>
-
-
-
-
   </body>
 </html>
