--- a/es/diagrama-de-gantt.html
+++ b/es/diagrama-de-gantt.html
@@ -30,7 +30,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg">
          <div class="logo">
-           <a href="https://workep.com/es/es.html"><img src="../images/logo.png" alt="Workep brand"></a>
+           <a href="https://workep.com/es/es.html"><img src="../images/logo.png" alt="Diagrama de gantt"></a>
          </div>
            <div class="ml-auto"><a href="https://app.workep.com/login" class="signupgoogle">
             <span class="textdesk">REGÍSTRATE CON GOOGLE</span>
