--- a/gantt.html
+++ b/gantt.html
@@ -29,7 +29,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg">
          <div class="logo">
-           <a href="#url"><img src="images/logo.png" alt=""></a>
+           <a href="https://workep.com"><img src="images/logo.png" alt="Workep brand"></a>
          </div>
            <div class="ml-auto"><a href="https://app.workep.com/login" class="signupgoogle">
           <span class="textdesk">SIGN UP WITH GOOGLE</span>
