--- a/gantt.html
+++ b/gantt.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Automated Gantt Chart on Workep</title>
+    <meta name="description" content="See your whole project schedule, including tasks, subtasks, and dependencies">
     <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
     <link rel="canonical" href="https://workep.com/gantt-chart.html"/>    
