diagrama de gantt
Diagrama de gantt

--- a/gantt.html
+++ b/gantt.html
@@ -47,6 +47,12 @@
       <div class="time_tracker_contentbox">
         <h1>Automated <br>Gantt Chart </h1>
         <h3>See your whole project schedule, including tasks, subtasks, and <u>dependencies.</u></h3>
+      </br>
+        <div class="ml-auto"><a href="https://app.workep.com/login" class="signupgoogle" style="width: 350px;">
+          <span class="textdesk">SIGN UP WITH GOOGLE</span>
+          <span class="textmob">SIGN UP</span>
+         </a>
+        </div>
       </div>
     </div>
     <div class="container time_tracker_img">
@@ -142,18 +148,11 @@
       </div>
     </div>
   </div>
-
-  
-
-
-
-
-
   <div class="twobutton_sec common_gap">
     <div class="container">
       <h2>Want to know more about the time tracker?<i><img src="images/vshs.png" alt=""></i></h2>
       <ul class="twobutton_sec_bot">
-        <li><a href="https://projectmanagement.workep.com/contact-sales" class="bluebtn_link">GET MORE INFORMATION</a></li>
+        <!--<li><a href="https://projectmanagement.workep.com/contact-sales" class="bluebtn_link">GET MORE INFORMATION</a></li>-->
         <li><a href="https://projectmanagement.workep.com/request-demo" class="bluebtn_link">REQUEST A DEMO TODAY</a></li>
       </ul>
     </div>
@@ -202,7 +201,7 @@
               <li><a href="https://workep.com/partners.html">Partners</a></li>
               <!--<li><a href="#url">Press Kit</a></li>-->
             </ul>
-            <h4>Competitors</h4>
+            <!--<h4>Competitors</h4>
             <ul class="links_all">
                 <li><a href="https://workep.com/competitors-airtable.html">Airtable</a></li>
                 <li><a href="https://workep.com/competitors-asana.html">Asana</a></li>
@@ -213,7 +212,7 @@
                 <li><a href="https://workep.com/competitors-smartsheet.html">Smartsheet</a></li>
                 <li><a href="https://workep.com/competitors-trello.html">Trello</a></li>
                 <li><a href="https://workep.com/competitors-wrike.html">Wrike</a></li>
-            </ul>  
+            </ul>-->  
           </div>
           <div class="foot4">
             <h4>Resources</h4>
@@ -229,14 +228,14 @@
               <li><a href="https://workep.com/privacy-policy.html">Privacy</a></li>
               <li><a href="https://workep.com/terms.html">Terms of Service</a></li>
             </ul>
-              <h4>Industry</h4>
+              <!--<h4>Industry</h4>
             <ul class="links_all">
                 <li><a href="https://workep.com/startups.html">Startup</a></li>
                 <li><a href="https://workep.com/law-firms.html">Law Firms</a></li>
                 <li><a href="https://workep.com/software-dev.html">Developer Dev</a></li>
                 <li><a href="https://workep.com/consulting.html">Consulting</a></li>
                 <li><a href="https://workep.com/marketing.html">Marketing</a></li>
-            </ul>
+            </ul>-->
           </div>
           <div class="foot5">
             <h4>Contact</h4>
@@ -288,13 +287,7 @@
 <script src="js/jQuery.inputSliderRange.min.js"></script>
 <script src="js/wow.js"></script>
 <script src="js/easy-responsive-tabs.js"></script>
-
-
 <script src="js/dics.original.js"></script>
-
 <script src="js/common.js"></script>
-
-
-
   </body>
 </html>	
