--- a/es/gantt.html
+++ b/es/gantt.html
@@ -65,6 +65,9 @@
     <div class="container">
       <div class="time_tracker_pgsec1_in">
         <div class="tt_video_box">
+          <video width="100%" height="auto" autoplay="" loop="" muted="" playsinline="">
+            <source src="../images/gifts/cross-team-collaboration.webm" type="video/webm">
+          </video> 
           <!--<figure class="tt_video_box_iframe">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/vXHLTV0wx8M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </figure>
@@ -284,8 +287,5 @@
 <script src="../js/easy-responsive-tabs.js"></script>
 <script src="../js/dics.original.js"></script>
 <script src="../js/common.js"></script>
-
-
-
   </body>
 </html>	
