--- a/es/precios.html
+++ b/es/precios.html
@@ -169,7 +169,7 @@
                     <span class="terms_notes">* Facturado anualmente o $11.99 facturado mensualmente</span>
                   </div>
                   <div class="pricing_box_trial">
-                    <a href="https://app.workep.com/login"><span>Probar 15 días gratis</span></a>
+                    <a href="https://projectmanagement.workep.com/demo"><span>Solicita una Demo</span></a>
                   </div>
                 </div>
               </li>
