--- a/pricing.html
+++ b/pricing.html
@@ -165,7 +165,7 @@
                     <span class="terms_notes">*Billed annually or $11.99 billed monthly</span>
                   </div>
                   <div class="pricing_box_trial">
-                    <a href="https://app.workep.com/login"><span>Start your 15 days free trial</span></a>
+                    <a href="https://projectmanagement.workep.com/request-demo"><span>Book a free Demo</span></a>
                   </div>
                 </div>
               </li>
