--- a/es/gantt.html
+++ b/es/gantt.html
@@ -252,8 +252,8 @@
           <div class="footlanguage">
            <div class="footlanguage_select">
               <select onchange="if (this.value) window.location.href=this.value">
-                <option value="https://workep.com/" selected>English</option>
-                <option value="https://workep.com/es/es.html">Español</option>
+                <option value="https://workep.com/">English</option>
+                <option value="https://workep.com/es/es.html" selected>Español</option>
               </select>
            </div>
           </div>
