--- a/pricing.html
+++ b/pricing.html
@@ -864,9 +864,7 @@
         <div class="foot_top_row">
           <div class="foot1">
             <a href="https://workep.com/" class="footer_logo"><img src="images/logo.png" alt="Logo Workep"></a>
-            <p>©2020 Workep,Inc. All rights reserved <br>
-              <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
-            </p>
+            <p>©2020 Workep,Inc. All rights reserved <br></p>
             <span class="madeby">Made with <i><img src="images/heart_im.png" alt="made with love "></i> by Workep</span>
           </div>
           <div class="foot2">
@@ -878,8 +876,7 @@
               <!-- <li><a href="https://workep.com/stories.html">Use cases </a></li> -->
               <li><a href="https://projectmanagement.workep.com/request-demo">Request a demo </a></li>
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
-              <li><a href="https://workep.com/made-for-google.html">Made for Google</a></li>
-              <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
+              <li><a href="https://workep.com/made-for-google.html">Made for Google</a></li>  
               <li><a href="https://workep.com/download-apps.html">Download Apps</a></li>
             </ul>
           </div>
