--- a/es/producto.html
+++ b/es/producto.html
@@ -259,22 +259,6 @@ hitos específicos.</P>
 
                   </div>
               </div>
-               <div class="justlike_google_block common_gap wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s">
-                <div class="section_title">
-                  <h2>Rastreador de tiempo</h2>
-                  <p>Registra tu tiempo, categorízalo por proyectos y tareas, y haz más productivo a tu equipo!</p>
-
-                </div>
-                <div class="justlike_google_block_im">
-                    <div class="timetracker_animatedimage">
-                      <img src="../images/google_doc_image2.png" alt="">
-                      <span class="timernumber">00:00:<span class="timer1"></span></span>
-                    </div>
-                    <div class="foundation_sec_slider_title">
-                      <p><span>Es muy fácil iniciar, ¡no necesitas integraciones externa!</span></p>
-                    </div>
-                  </div>
-              </div>
                <div class="justlike_google_block common_gap wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="section_title">
                   <h2>Inbox</h2>
@@ -1043,8 +1027,7 @@ hitos específicos.</P>
         <div class="favourite_tools">
           <h2>Integración perfecta con tus herramientas favoritas</h2>
           <ul class="tools_list">
-            <li><img src="../images/tool_im1.png" alt=""></li>
-            <li><img src="../images/tool_im2.png" alt=""></li>
+            <li><img src="../images/tool_im1.png" alt="Integración con Slack"></li>
           </ul>
         </div>
 
