update Google signup
update Google signup

--- a/es/producto.html
+++ b/es/producto.html
@@ -112,7 +112,7 @@
 y totalmente integrado dentro de G Suite.</p>
       <div class="joinworkep_btns">
         <ul>
-          <li><a href="#url" class="signupgoogle"><span>REGÍSTRATE CON GOOGLE</span></a></li>
+          <li><a href="https://app.workep.com/login" class="signupgoogle"><span>REGÍSTRATE CON GOOGLE</span></a></li>
           <!--<li><a href="#url" class="g_suitbtn"><span>MARKETPLACE DE G SUITE<br>
             <span class="ratings_star"><i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
