changes in the index
changes in the index page

--- a/es/es.html
+++ b/es/es.html
@@ -134,8 +134,8 @@
 </div>
 
 <div class="video_covid_container">
-  <div class="video_covid_wrapper">
-    <iframe style="border-radius:10px; width: 100%;"  height="500" src="https://www.youtube.com/embed/IKgB9f9Wv4Y?rel=0&vq=hd1080" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <div class="video_covid_wrapper" style="text-align: center; width: 800px; height:500px;"> 
+    <iframe style="border-radius:10px; width: 800px; height:450px;" src="https://www.youtube.com/embed/IKgB9f9Wv4Y?rel=0&vq=hd1080" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 </div>
 
@@ -143,7 +143,7 @@
   <div class="container">
     <div class="section_title">
           <h2>Hecho para Google</h2>
-          <p>Con un solo clic puedes correr toda la Suite de Google en una plataforma de colaboración</p>
+          <p>La Suite de Google colaborando en una plataforma con todo lo que necesitas para crecer.</p>
         </div>
   </div>
   <div class="index_made_forgoogle_bot">
