--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
             <ul class="navbar-nav ml-auto">
             <li><a href="https://workep.com/product.html">PRODUCT</a></li>
              <li><a href="https://workep.com/made-for-google.html">GOOGLE PROJECT MANAGEMENT</a></li>
-             <!-- <li><a href="https://workep.com/stories.html">USE CASES</a></li> -->
              <li><a href="https://workep.com/pricing.html">PRICING</a></li>
              <li><a href="https://workep.com/partners.html" target="_blank">PARTNERS</a></li>
 
@@ -95,7 +94,6 @@
                     <li><a href="https://blog.workep.com/" target="_blank">BLOG</a></li>
                     <li><a href="https://help.workep.com/" target="_blank">HELP CENTER</a></li>
                     <li><a href="https://www.youtube.com/watch?v=7DHmD2YM1_M">PRODUCT VIDEO</a></li>
-                    <!--<li><a href="https://community.workep.com/" target="_blank">COMMUNITY</a></li>-->
                 </ul>
               </li>
 
@@ -133,8 +131,8 @@
 </div>
 
 <div class="video_covid_container">
-  <div class="video_covid_wrapper">
-    <iframe style="border-radius:10px; width: 100%;" height="501" src="https://www.youtube.com/embed/hiF4fAh4HAU?rel=0&vq=hd1080" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <div class="video_covid_wrapper" style="text-align: center; width:800px; height:450px;">
+    <iframe style="border-radius:10px; width:800px; height:450px;" height="501" src="https://www.youtube.com/embed/hiF4fAh4HAU?rel=0&vq=hd1080" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 </div>
 
