Cahnges in made for google
Hate seson #2

--- a/es/hecho-para-google.html
+++ b/es/hecho-para-google.html
@@ -40,7 +40,7 @@
     <meta name="twitter:description" content="Una herramienta de gestión de proyectos que es rápida, fácil de usar y totalmente integrada con G Suite" />
     <meta name="twitter:image" content="https://res.cloudinary.com/cegalvarez/image/upload/v1555274914/landingSocial/images/socialmediacover.jpg" />
 
-    <title>Gestión de proyectos para Google y G Suite</title>
+    <title>Gestión colaborativa con Google y G Suite</title>
 
     <!-- Page icon -->
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
@@ -88,7 +88,6 @@
                     <li><a href="https://blog.workep.com/es/" target="_blank">BLOG</a></li>
                     <li><a href="https://help.workep.com/" target="_blank">CENTRO DE AYUDA</a></li>
                     <li><a href="https://www.youtube.com/watch?v=7DHmD2YM1_M" target="_blank">VIDEO DE PRODUCTO</a></li>
-                   <!--<li><a href="https://community.workep.com/" target="_blank">COMUNIDAD</a></li>-->
                 </ul>
               </li>
              <li class="loginbtn"><a href="https://app.workep.com/login">INICIAR SESIÓN</a></li>
@@ -111,8 +110,8 @@
       </div>
       <div class="col-md-7 madeforgoogle_banner_R ml-auto">
         <div class="madeforgoogle_banner_box">
-         <h1 style="font-size: 33px!important;"><strong>Gestión de Proyectos Google #1</strong></h1>     
-         <p>Con un solo clic puedes convertir G Suite en una única herramienta de colaboración. Crea documentos de Google, eventos de calendario, agrega contactos e integra Gmail, todo sin conocimientos técnicos.</p>
+         <h1 style="font-size: 33px!important;"><strong>Gestión colaborativa con Google</strong></h1>     
+         <p>Con Workep convierte G Suite en una única herramienta de colaboración. Crea documentos de Google, eventos en el caledario e integrado con Gmail y Drive, todo sin conocimientos técnicos.</p>
         </div>
          <div class="joinworkep_btns">
             <ul>
@@ -139,13 +138,13 @@
     <div class="container">
       <div class="section_title">
           <h2>La otra mitad de G Suite</h2>
-          <p>Workep centraliza y automatiza G Suite en una plataforma de<br>gestión de proyectos que es rápida y fácil de usar.</p>
+          <p>Workep centraliza y automatiza G suite en una plataforma de <br>gestión colaborativa que es rápida y fácil de usar.</p>
         </div>
     </div>
     <div class="missing_half_gsuit_bot">
       <div class="missing_half_gsuit_im">
         <img src="../images/gsuit_missing_hlf_im.png" alt="">
-        <a href="#url" class="signupgoogle"><span>REGÍSTRATE CON GOOGLE</span></a>
+        <a href="https://app.workep.com/login" class="signupgoogle"><span>REGÍSTRATE CON GOOGLE</span></a>
       </div>
       <div class="missing_half_gsuit_ic1 wow swing" data-wow-delay="1s" data-wow-duration="2s">
         <img src="../images/sinup_ic1.png" alt="">
@@ -175,7 +174,7 @@
   <div class="addon_task_sec common_gap">
     <div class="container">
        <div class="section_title">
-          <h2>Integración y Add-on de Gmail<br>Convierte tus correos en tareas</h2>
+          <h2>Integración con Gmail<br>Convierte tus correos en tareas</h2>
           <div class="addon_img wow bounceInUp" data-wow-delay="0.3" data-wow-duration="1s">
             <img src="../images/gmail_addon.png" alt="">
           </div>
@@ -210,35 +209,10 @@
                 <li data-target="#carouselExampleIndicators" data-slide-to="2"><span class="addon_progress_bar">
                   <span></span>
                 </span>
-                <p>Sincronizado con Workep</p></li>
+                <p>Gestiona tus tareas creadas en tu tablero de Workep</p></li>
               </ol>
-
             </div>
-
           </div>
-          <!-- <img src="../images/progressbr2.jpg" alt=""> -->
-          <!-- <div class="addon_progress_sec">
-            <ul>
-              <li>
-                <span class="addon_progress_bar">
-                  <span></span>
-                </span>
-                <p>Inside your email</p>
-              </li>
-              <li>
-                <span class="addon_progress_bar">
-                  <span></span>
-                </span>
-                <p>Inside your email</p>
-              </li>
-              <li>
-                <span class="addon_progress_bar">
-                  <span></span>
-                </span>
-                <p>Inside your email</p>
-              </li>
-            </ul>
-          </div> -->
         </div>
     </div>
   </div>
@@ -250,9 +224,8 @@
           <div class="addon_img wow bounceInUp" data-wow-delay="0.3s" data-wow-duration="1s">
             <img src="../images/google_drive_ic.png" alt="">
           </div>
-          <p>Crea Google Docs directamente desde tus tareas en Workep. Adjunta documentos de Drive a tus tareas. Encuentra los documentos que necesitas para una tarea específica, fácilmente, sin perder tiempo.</p>
+          <p>Crea Google Docs directamente desde tus tareas en Workep.<br>Adjunta y encuentra los documentos que necesitas, sin perder el tiempo.</p>
         </div>
-
         <div class="google_drive_tab" id="horizontalTab">
           <div class="google_drive_tabL tabbed_navigation">
             <ul class="resp-tabs-list google_drive_tab_nav">
@@ -311,7 +284,7 @@
               <div class="col-lg-7 google_quick_project_L">
                   <h2># Proyectos</h2>
                   <div class="google_quick_project_con">
-                    <p>Sincronización: todo en un solo vistazo.</br>Flexibilidad: ver solo tus eventos, o los de todo tu equipo.</p>
+                    <p>Sincronización: todo en un sólo lugar.</br>Colaboración: visualiza tus tareas y las de tu equipo</p>
                   </div>
                   <div class="google_quick_slider google_quick_slider_nav">
                       <a class="google_quick_slide" href="#url">
@@ -377,8 +350,8 @@
   <div class="hangout_chat common_gap">
     <div class="container">
        <div class="section_title">
-          <h2>Hangouts y Google Chat <br>Comunicación efectiva</h2>
-          <p>La comunicación en tiempo real es fundamental. <br>Empieza una reunión en Hangouts o una ventana de Google Chat directamente desde Workep.</p>
+          <h2>Google Chat <br>Comunicación efectiva</h2>
+          <p>Visualiza el estado de tus proyectos, <br>utilizando google chat como canal de comunicación</p>
         </div>
         <div class="hangout_chat_bot">
           <div class="row">
@@ -421,36 +394,8 @@
             </div>
           </div>
         </div>
-
-
     </div>
   </div>
-
-
-  <!--<div class="google_contact_sec common_gap">
-    <div class="container">
-       <div class="section_title">
-          <h2>Google Contacts <br>Información de tus contactos en un vistazo</h2>
-          <div class="addon_img wow bounceInUp" data-wow-delay="0.3s" data-wow-duration="1s">
-            <img src="../images/google_contact_icon.png" alt="">
-          </div>
-          <p>Haz clic en un contacto de Google para expandirlo y visualizar toda su información en Workep. <br>Teléfono, email, y cualquier otro dato que hayas guardado previamente.</p>
-        </div>
-
-        <div class="google_contact_secbot">
-          <div class="google_contact_title">
-            <figure></figure>
-            <span>Daniel Arch</span>
-          </div>
-         <img src="../images/group.png" alt="">
-        </div>
-
-
-
-    </div>
-  </div>-->
-
-
   <div class="google_cloud_sec common_gap">
     <div class="container">
        <div class="section_title">
@@ -467,9 +412,7 @@
         </div>
     </div>
   </div>
-
 </div>
-
 <div class="joinworkep common_gap">
     <div class="container">
       <div class="section_title">
@@ -491,25 +434,19 @@
       </div>
     </div>
   </div>
-
   <footer class="main_footer">
       <div class="foot_top">
         <div class="container">
           <div class="foot_top_row">
             <div class="foot1">
               <a href="https://workep.com/" class="footer_logo"><img src="../images/logo.png" alt=""></a>
-              <p>©2020 Workep,Inc. todos los derechos reservados<br>
-                <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
-              </p>
+              <p>©2020 Workep,Inc. todos los derechos reservados<br></p>
               <span class="madeby">Hecho con <i><img src="../images/heart_im.png" alt="workep made with love "></i> por Workep</span>
             </div>
             <div class="foot2">
               <h4>Producto</h4>
               <ul class="links_all">
                 <li><a href="https://workep.com/es/producto.html">Características</a></li>
-                <!-- <li><a href="#url">Integrations </a></li> -->
-                <!-- <li><a href="#url">Users guide </a></li> -->
-                <!-- <li><a href="https://workep.com/es/casosdeuso.html">Casos de uso </a></li> -->
                 <li><a href="https://projectmanagement.workep.com/request-demo">Solicitar un demo </a></li>
                 <li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>
                 <li><a href="https://workep.com/es/hecho-para-google.html">Hecho para Google</a></li>
@@ -522,14 +459,12 @@
                 <li><a href="https://workep.com/es/precios.html">Precios</a></li>
                 <li><a href="https://angel.co/workep/jobs">Trabaja con nosotros</a></li>
                 <li><a href="https://workep.com/es/socios.html">Socios</a></li>
-                <!--<li><a href="#url">Press Kit</a></li>-->
               </ul>
             </div>
             <div class="foot4">
               <h4>Recursos</h4>
               <ul class="links_all">
                 <li><a href="https://blog.workep.com/es/">Blog</a></li>
-                <!-- <li><a href="#url">Ebooks </a></li> -->
                 <li><a href="https://www.youtube.com/channel/UCt3GbHNB2il6tiXxoXtukUQ">Videos</a></li>
                 <li><a href="https://help.workep.com/">Centro de ayuda</a></li>
                 <li><a href="https://projectmanagement.workep.com/everything-you-need-to-know-about-project-management">Guía gestión de proyectos</a></li>
@@ -594,11 +529,6 @@
 <script src="../js/easy-responsive-tabs.js"></script>
 <script src="../js/demos.js"></script>
 <script src="../js/typed.js"></script>
-
-
 <script src="../js/common.js"></script>
-
-
-
   </body>
 </html>
