Changes in made for google updates
Changes in made for google

--- a/es/hecho-para-google.html
+++ b/es/hecho-para-google.html
@@ -111,7 +111,7 @@
       <div class="col-md-7 madeforgoogle_banner_R ml-auto">
         <div class="madeforgoogle_banner_box">
          <h1 style="font-size: 33px!important;"><strong>Gestión colaborativa con Google</strong></h1>     
-         <p>Con Workep convierte G Suite en una única herramienta de colaboración. Crea documentos de Google, eventos en el caledario e integrado con Gmail y Drive, todo sin conocimientos técnicos.</p>
+         <p>Con Workep convierte G Suite en una única herramienta de colaboración. Crea documentos de Google, eventos en el calendario integrados con Gmail y Drive, todo sin conocimientos técnicos.</p>
         </div>
          <div class="joinworkep_btns">
             <ul>
@@ -351,7 +351,7 @@
     <div class="container">
        <div class="section_title">
           <h2>Google Chat <br>Comunicación efectiva</h2>
-          <p>Visualiza el estado de tus proyectos, <br>utilizando google chat como canal de comunicación</p>
+          <p>Visualiza el estado de tus proyectos, <br>utilizando Google chat como canal de comunicación</p>
         </div>
         <div class="hangout_chat_bot">
           <div class="row">
