--- a/es/es.html
+++ b/es/es.html
@@ -84,9 +84,8 @@
             <ul class="navbar-nav ml-auto">
             <li><a href="https://workep.com/es/producto.html">PRODUCTO</a></li>
              <li><a href="https://workep.com/es/hecho-para-google.html">GESTIÓN DE PROYECTOS GOOGLE</a></li>
-             <!-- <li><a href="https://workep.com/es/casosdeuso.html">CASOS DE USO</a></li> -->
              <li><a href="https://workep.com/es/precios.html">PRECIOS</a></li>
-             <li><a href="https://workep.com/es/socios.html" target="_blank">SOCIOS</a></li>
+             <!--<li><a href="https://workep.com/es/socios.html" target="_blank">SOCIOS</a></li>-->
 
              <li class="menu-item-has-children">
                 <a href="https://blog.workep.com/es/" target="_blank">RECURSOS</a>
@@ -95,8 +94,6 @@
                   <li><a href="https://docs.google.com/presentation/d/1caeMup8kqHDKAfbapdWlN8Krdd6k4azUho1AHv2wGA8/present?slide=id.p" target="_blank">GUIA DE USUARIO</a></li>
                     <li><a href="https://blog.workep.com/es/" target="_blank">BLOG</a></li>
                     <li><a href="https://help.workep.com/" target="_blank">CENTRO DE AYUDA</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=7DHmD2YM1_M" target="_blank">VIDEO DE PRODUCTO</a></li>
-                    <!--<li><a href="https://community.workep.com/" target="_blank">COMUNIDAD</a></li>-->
                 </ul>
               </li>
 
