--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <li><a href="https://workep.com/product.html">PRODUCT</a></li>
              <li><a href="https://workep.com/made-for-google.html">GOOGLE PROJECT MANAGEMENT</a></li>
              <li><a href="https://workep.com/pricing.html">PRICING</a></li>
-             <li><a href="https://workep.com/partners.html" target="_blank">PARTNERS</a></li>
+             <!--<li><a href="https://workep.com/partners.html" target="_blank">PARTNERS</a></li>-->
 
              <li class="menu-item-has-children">
                 <a href="https://blog.workep.com/" target="_blank">RESOURCES</a>
@@ -93,7 +93,6 @@
                     <li><a href="https://docs.google.com/presentation/d/12OPs8ZAZ_m5WIX82-obhGP4He2RKttbsfXPEMFbbusg/present?slide=id.p" target="_blank">USER'S GUIDE</a></li>
                     <li><a href="https://blog.workep.com/" target="_blank">BLOG</a></li>
                     <li><a href="https://help.workep.com/" target="_blank">HELP CENTER</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=7DHmD2YM1_M">PRODUCT VIDEO</a></li>
                 </ul>
               </li>
 
