--- a/es/es.html
+++ b/es/es.html
@@ -74,7 +74,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg">
          <div class="logo">
-           <a href="https://workep.com"><img src="../images/logo.png" alt="workep logo"></a>
+           <a href="https://workep.com/es/es.html"><img src="../images/logo.png" alt="workep logo"></a>
          </div>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
            <img src="../images/menu_bars.svg" alt="workep menu">
@@ -731,11 +731,8 @@
             <h4>Producto</h4>
             <ul class="links_all">
               <li><a href="https://workep.com/es/producto.html">Características</a></li>
-              <!-- <li><a href="#url">Integrations </a></li> -->
-              <!-- <li><a href="#url">Users guide </a></li> -->
-              <!-- <li><a href="https://workep.com/es/casosdeuso.html">Casos de uso </a></li> -->
-              <li><a href="https://projectmanagement.workep.com/request-demo">Solicitar un demo </a></li>
-              <li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>
+              <li><a href="https://projectmanagement.workep.com/demo">Solicitar un demo </a></li>
+              <!--<li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>-->
               <li><a href="https://workep.com/es/hecho-para-google.html">Hecho para Google</a></li>
               <li><a href="https://workep.com/es/descargar-apps.html">Descargar Apps</a></li>
             </ul>
@@ -744,16 +741,12 @@
             <h4>Workep</h4>
             <ul class="links_all">
               <li><a href="https://workep.com/es/precios.html">Precios</a></li>
-              <li><a href="https://angel.co/workep/jobs">Trabaja con nosotros</a></li>
-              <li><a href="https://workep.com/es/socios.html">Socios</a></li>
-              <!--<li><a href="#url">Press Kit</a></li>-->
             </ul>
           </div>
           <div class="foot4">
             <h4>Recursos</h4>
             <ul class="links_all">
               <li><a href="https://blog.workep.com/es/">Blog</a></li>
-              <!-- <li><a href="#url">Ebooks </a></li> -->
               <li><a href="https://www.youtube.com/channel/UCt3GbHNB2il6tiXxoXtukUQ">Videos</a></li>
               <li><a href="https://help.workep.com/">Centro de ayuda</a></li>
               <li><a href="https://projectmanagement.workep.com/everything-you-need-to-know-about-project-management">Guía gestión de proyectos</a></li>
