--- a/es/precios.html
+++ b/es/precios.html
@@ -76,10 +76,7 @@
             <ul class="navbar-nav ml-auto">
             <li><a href="https://workep.com/es/producto.html">PRODUCTO</a></li>
              <li><a href="https://workep.com/es/hecho-para-google.html">GESTIÓN DE PROYECTOS GOOGLE</a></li>
-             <!-- <li><a href="https://workep.com/es/casosdeuso.html">CASOS DE USO</a></li> -->
              <li><a href="https://workep.com/es/precios.html">PRECIOS</a></li>
-             <li><a href="https://workep.com/es/socios.html" target="_blank">SOCIOS</a></li>
-
              <li class="menu-item-has-children">
                 <a href="https://blog.workep.com/es/" target="_blank">RECURSOS</a>
                 <span class="clickD"></span>
@@ -87,8 +84,6 @@
                   <li><a href="https://docs.google.com/presentation/d/1caeMup8kqHDKAfbapdWlN8Krdd6k4azUho1AHv2wGA8/present?slide=id.p" target="_blank">GUIA DE USUARIO</a></li>
                     <li><a href="https://blog.workep.com/es/" target="_blank">BLOG</a></li>
                     <li><a href="https://help.workep.com/" target="_blank">CENTRO DE AYUDA</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=7DHmD2YM1_M" target="_blank">VIDEO DE PRODUCTO</a></li>
-                    <!--<li><a href="https://community.workep.com/" target="_blank">COMUNIDAD</a></li>-->
                 </ul>
               </li>
 
@@ -866,7 +861,7 @@
       <div class="container">
         <div class="foot_top_row">
           <div class="foot1">
-            <a href="https://workep.com/" class="footer_logo"><img src="../images/logo.png" alt=""></a>
+            <a href="https://workep.com/es/es.html" class="footer_logo"><img src="../images/logo.png" alt=""></a>
             <p>©2020 Workep,Inc. todos los derechos reservados<br>
               <!-- <span><a href="tel:+12010000000">+1 (510) 000-0000</a></span> -->
             </p>
@@ -876,11 +871,8 @@
             <h4>Producto</h4>
             <ul class="links_all">
               <li><a href="https://workep.com/es/producto.html">Características</a></li>
-              <!-- <li><a href="#url">Integrations </a></li> -->
-              <!-- <li><a href="#url">Users guide </a></li> -->
-              <!-- <li><a href="https://workep.com/es/casosdeuso.html">Casos de uso </a></li> -->
-              <li><a href="https://projectmanagement.workep.com/request-demo">Solicitar un demo </a></li>
-              <li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>
+              <li><a href="https://projectmanagement.workep.com/demo">Solicitar un demo </a></li>
+              <!--<li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>-->
               <li><a href="https://workep.com/es/hecho-para-google.html">Hecho para Google</a></li>
               <li><a href="https://workep.com/es/descargar-apps.html">Descargar Apps</a></li>
             </ul>
@@ -889,9 +881,6 @@
             <h4>Workep</h4>
             <ul class="links_all">
               <li><a href="https://workep.com/es/precios.html">Precios</a></li>
-              <li><a href="https://angel.co/workep/jobs">Trabaja con nosotros</a></li>
-              <li><a href="https://workep.com/es/socios.html">Socios</a></li>
-              <!--<li><a href="#url">Press Kit</a></li>-->
             </ul>
           </div>
           <div class="foot4">
