--- a/es/hecho-para-google.html
+++ b/es/hecho-para-google.html
@@ -76,10 +76,7 @@
             <ul class="navbar-nav ml-auto">
             <li><a href="https://workep.com/es/producto.html">PRODUCTO</a></li>
              <li><a href="https://workep.com/es/hecho-para-google.html">GESTIÓN DE PROYECTOS GOOGLE</a></li>
-             <!-- <li><a href="https://workep.com/es/casosdeuso.html">CASOS DE USO</a></li> -->
              <li><a href="https://workep.com/es/precios.html">PRECIOS</a></li>
-             <li><a href="https://workep.com/es/socios.html" target="_blank">SOCIOS</a></li>
-
              <li class="menu-item-has-children">
                 <a href="https://blog.workep.com/es/" target="_blank">RECURSOS</a>
                 <span class="clickD"></span>
@@ -87,7 +84,6 @@
                   <li><a href="https://docs.google.com/presentation/d/1caeMup8kqHDKAfbapdWlN8Krdd6k4azUho1AHv2wGA8/present?slide=id.p" target="_blank">GUIA DE USUARIO</a></li>
                     <li><a href="https://blog.workep.com/es/" target="_blank">BLOG</a></li>
                     <li><a href="https://help.workep.com/" target="_blank">CENTRO DE AYUDA</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=7DHmD2YM1_M" target="_blank">VIDEO DE PRODUCTO</a></li>
                 </ul>
               </li>
              <li class="loginbtn"><a href="https://app.workep.com/login">INICIAR SESIÓN</a></li>
@@ -439,7 +435,7 @@
         <div class="container">
           <div class="foot_top_row">
             <div class="foot1">
-              <a href="https://workep.com/" class="footer_logo"><img src="../images/logo.png" alt=""></a>
+              <a href="https://workep.com/es/es.html" class="footer_logo"><img src="../images/logo.png" alt=""></a>
               <p>©2020 Workep,Inc. todos los derechos reservados<br></p>
               <span class="madeby">Hecho con <i><img src="../images/heart_im.png" alt="workep made with love "></i> por Workep</span>
             </div>
@@ -447,8 +443,7 @@
               <h4>Producto</h4>
               <ul class="links_all">
                 <li><a href="https://workep.com/es/producto.html">Características</a></li>
-                <li><a href="https://projectmanagement.workep.com/request-demo">Solicitar un demo </a></li>
-                <li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>
+                <li><a href="https://projectmanagement.workep.com/demo">Solicitar un demo </a></li>
                 <li><a href="https://workep.com/es/hecho-para-google.html">Hecho para Google</a></li>
                 <li><a href="https://workep.com/es/descargar-apps.html">Descargar Apps</a></li>
               </ul>
@@ -457,8 +452,6 @@
               <h4>Workep</h4>
               <ul class="links_all">
                 <li><a href="https://workep.com/es/precios.html">Precios</a></li>
-                <li><a href="https://angel.co/workep/jobs">Trabaja con nosotros</a></li>
-                <li><a href="https://workep.com/es/socios.html">Socios</a></li>
               </ul>
             </div>
             <div class="foot4">
